--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
 </head>
 <body class="open-sans">
     <header>
-
+        <!-- Navbar Section Starts -->
+        <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <ul>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="button-primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <!-- Navbar Section Ends -->
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
