Implemented the banner section.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/225bb3c2b6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="open-sans">
-    <header>
+    <!-- Header Section Starts -->
+    <header class="header secondary-bg">
         <!-- Navbar Section Starts -->
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
@@ -22,7 +25,20 @@
             </ul>
         </nav>
         <!-- Navbar Section Ends -->
+         <!-- Banner Section Starts -->
+          <div class="banner">
+            <div class="banner-content">
+                <h4 class="banner-greetings dark-2">Hi, I am</h4>
+                <h1 class="banner-title dark-1">Mary Hardy</h1>
+                <p class="banner-description dark-3">Full Stack Developer, passionate about creating robust Web Applications. Expertise in React, Node.js, MongoDB and Express JS.</p>
+                <button class="button-primary">Download CV <i class="fa-solid fa-download"></i></button>
+                <button class="button-secondary">Contact <i class="fa-solid fa-phone"></i></button>
+            </div>
+            <img class="banner-profile-picture" src="images/hardy.png" alt="">
+          </div>
+          <!-- Banner Section Ends -->
     </header>
+        <!-- Header Section Ends -->
     <main>
 
     </main>
