--- a/index.html
+++ b/index.html
@@ -40,7 +40,30 @@
     </header>
         <!-- Header Section Ends -->
     <main>
-
+        <!-- About Section Starts -->
+         <section class="about secondary-bg">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I am a Full Stack Developer as well as Web Designer. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering the work within time and budget which meets clients requirements in our meta.</p>
+            <div class="about-items">
+                <div class="about-item">
+                    <p class="item-title">Name:</p>
+                    <p class="item-description">Mary Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email:</p>
+                    <p class="item-description">maryhardy@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date of Birth:</p>
+                    <p class="item-description">11 November 1987</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From:</p>
+                    <p class="item-description">Los Angeles, USA</p>
+                </div>
+            </div>
+         </section>
+         <!-- About Section Ends -->
     </main>
     <footer>
 
