--- a/index.html
+++ b/index.html
@@ -148,8 +148,27 @@
         </section>
         <!-- Resume Section Ends -->
     </main>
-    <footer>
-
+    <!-- Footer Section Starts -->
+    <footer class="secondary-bg">
+        <div class="footer-column">
+            <h3 class="section-title dark-1">Let's Connect</h3>
+            <p class="dark-3">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/instagram.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Message Me</h3>
+            <form action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <textarea name="" id="" rows="10" cols="20" placeholder="Your Message"></textarea>
+                <input class="button-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
+    <!-- Footer Section Ends -->
 </body>
 </html>
